[gd_scene load_steps=11 format=3 uid="uid://vk2y4sbul4g7"]

[ext_resource type="Script" path="res://GAME/Scripts/UI/start_menu.gd" id="1_t4o8i"]
[ext_resource type="Shader" path="res://GAME/Scripts/Shaders/background.gdshader" id="2_nib3y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pc32s"]
shader = ExtResource("2_nib3y")
shader_parameter/blur_type = 0
shader_parameter/blur_amount = 16
shader_parameter/blur_radius = 1.0
shader_parameter/blur_direction = Vector2(1, 1)

[sub_resource type="InputEventKey" id="InputEventKey_l000a"]
device = -1
keycode = 87
unicode = 119

[sub_resource type="InputEventKey" id="InputEventKey_2fbeb"]
device = -1
keycode = 4194320

[sub_resource type="Shortcut" id="Shortcut_dldj5"]
events = [SubResource("InputEventKey_l000a"), SubResource("InputEventKey_2fbeb")]

[sub_resource type="InputEventKey" id="InputEventKey_5ugo4"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_ud5pn"]
events = [SubResource("InputEventKey_5ugo4")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2td6"]
bg_color = Color(1, 1, 1, 0.823529)
border_width_left = 3
border_width_top = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1cl3"]
bg_color = Color(1, 1, 1, 0.823529)
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15
anti_aliasing = false

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4o8i")

[node name="background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pc32s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.5
offset_top = 60.0
offset_right = 286.5
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "DRUNK WHEEL"

[node name="Creator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -461.0
offset_top = -40.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Adrien Rey, Alec Schmidt, Mathieu Schupbach "

[node name="Context" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -35.0
offset_right = 287.0
offset_bottom = -12.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "MSE -  MA_GT 2024/2025"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 414.5
offset_top = 292.5
offset_right = 454.5
offset_bottom = 332.5

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
action_mode = 0
shortcut = SubResource("Shortcut_dldj5")
text = " Press W to start "

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_ud5pn")
text = "  Press Q to quit  "

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -140.0
offset_right = 375.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Challenge yourself - 
home is just a few drinks away!"
horizontal_alignment = 1

[node name="Scores_name" type="Label" parent="."]
offset_left = 850.0
offset_top = 150.0
offset_right = 990.0
offset_bottom = 550.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_h2td6")
horizontal_alignment = 2

[node name="Scores_value" type="Label" parent="."]
offset_left = 990.0
offset_top = 150.0
offset_right = 1130.0
offset_bottom = 550.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_l1cl3")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
